k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: future-suite-qa
  labels:
    app: future-suite
