k8s/staging/future-suite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: future-suite
  namespace: future-suite-qa
  labels:
    app: future-suite
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: future-suite
