k8s/staging/sf-digital-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sf-digital
  namespace: sf-digital-qa
  labels:
    app: sf-digital
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sf-digital
